# DreamScribbles

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  docker.yml
docker/: .dockerignore  Dockerfile.cpu  Dockerfile.cuda
scripts/: download_models.py
src/dreamscribbles/: __main__.py  config.py  styles.py
src/dreamscribbles/inference/: pipeline.py
src/dreamscribbles/utils/: image_ops.py
src/dreamscribbles/web/: app.py
tests/: test_image_ops.py  test_styles.py
